@@ -4,6 +4,7 @@ Revision history for Perl extension DBIx::Skinny
    2010-XX-XX
         - MOD : add load_class method.
         - ADD : add_where_raw method for Skinny::SQL (thanks nihen)
+        - MOD : Iterator's no_cache method has been deprecated. use cache method instead.
 
 0.0729
    2010-11-30
